crates/finlang-types/tests/snapshots/error_render__render_mul_two_prices.snap
---
source: crates/finlang-types/tests/error_render.rs
expression: rendered
---
error[E001]: dimensional type mismatch: multiplying two prices is dimensionally invalid
  ┌─ source.fin:3:1
  │
3 │ p1 * p2
  │ ^^   -- price
  │ │     
  │ price
